src/App.css
/* ... */
  
  .poppins-semibold {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-style: normal;
  }
  
  .poppins-bold {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    font-style: normal;
  }
  
  .poppins-extrabold {
    font-family: "Poppins", sans-serif;
    font-weight: 800;
    font-style: normal;
  }
  
  .poppins-black {
    font-family: "Poppins", sans-serif;
    font-weight: 900;
    font-style: normal;
  }

#root, html, body {
    margin: 0;
    padding: 0;
    height: 100vh;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.app {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: relative;
    overflow: hidden; 
}

.hide-for-snapshot {
    display: none !important;
  }

.navbar-buttons.hide-for-snapshot {
    display: none !important;
}

/* Define the flash effect animation */
@keyframes flash {
    0% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

/* Style for the flashing overlay */
.flash-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: white;
    opacity: 0; /* Start hidden */
    z-index: 4; /* Ensure it's above other elements */
    pointer-events: none; /* Allow interactions through it */
    transition: opacity 0.5s; /* Smooth transition for opacity change */
}

/* Show the flash effect */
.flash-overlay.active {
    opacity: 1; /* Make it visible for the flash effect */
    animation: flash 0.5s ease-in-out; /* Apply flash animation */
}

.background-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: calc(100vh); 
    background-size: cover; 
    background-position: center;
    background-repeat: no-repeat;
    transition: opacity 1s ease-in-out;
    opacity: 1;
}

.background-wrapper.fade-in {
    opacity: 1; 
    transition: opacity 1s ease-in-out;
}

.background-wrapper.fade-out {
    opacity: 0; 
    transition: opacity 1s ease-in-out; 
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.7); 
    z-index: 1;
}

/* Navbar styling */
.navbar {
    position: fixed; 
    top: 0;
    left: 0;
    width: 100%;
    padding: 50px 0px;
    color: white;
    z-index: 3; 
    background-color: transparent; 
}

/* Navbar links styling */
.navbar a {
    color: white;
    text-decoration: none;
    margin-right: 20px;
    font-size: 16px;
}

.navbar a:hover {
    text-decoration: underline; 
}

.navbar-icon {
    width: 24px; 
    height: 24px; 
    padding: 20px 0px;
    object-fit: contain; 
    margin: 0 10px; 
    filter: brightness(0) invert(1);
    color:rgba(0, 0, 0, 1)
}

.navbar-icon-button {
    background: none; 
    border: none;     
    cursor: pointer;  
}

.notification {
    position: fixed;
    top: 130px; 
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(0, 0, 0, 0.6); 
    color: white; 
    padding: 10px 20px;
    border-radius: 5px;
    z-index: 1000;
    font-size: 14px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto; 
    max-width: 90%;
}

.card {
    width: 70%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 2%;
    position: relative;
    z-index: 2; 
    color: white;
    font-size: calc(1rem + 1vw); /* Scales with viewport width */
}

.book, .content {
    color: white;
    font-size: calc(1rem + 1vw); /* Scales with viewport width */
}

h4, h3, h2, h5 {
    margin: 10px 0;
}

/* Button container for fixed bottom positioning */
.buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px; 
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
}

.button-next {
    align-items: center;
    justify-content: center;
    position: absolute;
    margin: 0 40px;
}

.button {
    outline: none;
    text-decoration: none;
    background: none; 
    border: none;
    color: white; 
    cursor: pointer;
    font-size: 18px;
    padding: 0 20px; 
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); 
    transition: text-shadow 0.3s ease;
    width: auto; 
    white-space: nowrap; 
    font-size: 15px;
}

.button:hover {
    text-shadow: 10px 10px 16px rgba(0, 0, 0, 0.9); 
}

.button span {
    margin: 0 10px;
    text-transform: none; 
}

/* Style for the vertical line separator between buttons */
.separator {
    color: white;
    font-size: 18px;
}

/* Hadith content styles */
.hadith-header {
    font-size: calc(0.6rem + 0.5vw); /* Scales with viewport width */
    text-align: left; 
    width: 100%; 
    margin-bottom: 10px; 
    font-weight: 200;
}

.book p, .bookName p, .chapterName p {
    font-size: calc(0.5rem + 0.5vw); /* Scales with viewport width */
    font-weight: 200;
    margin: 2px 0; 
}

.book {
    margin-bottom: 25px;
}

.content p {
    text-align: left;
    font-size: calc(0.7rem + 1vw); /* Scales with viewport width */
    margin: 10px 0; 
    font-weight: 400;
}

.ref{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.watermark{
    font-size: calc(0.6rem + 0.5vw);
    text-align: center;
    width: 100%;
    font-weight: 200;
    margin-top: 50px;
}

.hadith-ref {
    font-size: calc(0.6rem + 0.5vw); /* Scales with viewport width */
    text-align: right; 
    width: 100%;
    margin-top: 10px; 
    font-weight: 200; 
}
/* ... */

